--- a/index.html
+++ b/index.html
@@ -17,8 +17,14 @@
         #heading01{
             color: darkgreen;
         }
-        a{
+        .parent a{
             text-decoration: none;
+        }
+        .parent {
+            border: 5px solid gold 
+        }
+        h1{
+            text-decoration:overline underline dashed;
         }
     </style>
 </head>
@@ -86,5 +92,10 @@
 <p id="para01">asdfghjklwertyuiol;cvbnm </p>
 <a href="">home</a>
 <a href="https://github.com/navjot3220/Full-stack-codes">contact</a>
+<div class="parent">
+<a href="" >login</a>
+<a href="" >time</a>
+<a href="" >support</a>
+</div>
 </body>
 </html>
